# stm32-cmake

./: buildHex.py
examples/blinky/: CMakeLists.txt  blinky.c
